# ytmusic-tui

./: .gitignore  CONTRIBUTING.md  LICENSE  PARITY_CHECKLIST.md  README.md  config  pyproject.toml
.github/workflows/: ci.yml  rust.yml
config/: default.toml  default_keymap.toml
rust/: Cargo.toml  PARITY_CHECKLIST.md
rust/docs_drafts/: HANDOFF.md  README.md
rust/spikes/mpris_spike/: Cargo.toml  FINDINGS.md
rust/spikes/mpris_spike/src/: main.rs  player_impl.rs  trackid.rs
rust/spikes/mpv_spike/: Cargo.toml  FINDINGS.md
rust/spikes/mpv_spike/src/: main.rs
rust/ytmusic-api/src/: classify.rs  context.rs  error.rs  lib.rs  nav.rs  parse.rs
rust/ytmusic-api/src/endpoints/: album.rs  artist.rs  home.rs  library.rs  lyrics.rs  mod.rs  mutations.rs  playlist.rs  radio.rs  search.rs  songruns.rs  stage1.rs  tests.rs
rust/ytmusic-api/tests/: integration.rs  parse_tests.rs
rust/ytmusic-api/tests/fixtures_innertube/: library_artists.json  library_playlists.json  playlist_expected.json  search_default.json  search_songs.json  watch_radio.json
rust/ytmusic-tui/: Cargo.toml
rust/ytmusic-tui/src/: config.rs  formatting.rs  keymap.rs  layout.rs  lib.rs  main.rs  navigation.rs  player.rs  queue.rs
rust/ytmusic-tui/src/app/: mod.rs
rust/ytmusic-tui/src/views/: album.rs  artist.rs  filter_bar.rs  history.rs  home.rs  library.rs  lyrics.rs  mod.rs  player_bar.rs  playlist.rs  popup.rs  queue_view.rs  search.rs  toast.rs
screenshots/: .gitignore  generate-gif.sh  generate.sh
screenshots/tapes/: home-catppuccin.tape  home-gruvbox.tape  home-nord.tape  home-synthwave.tape  home.tape  library.tape  player.tape  popup.tape  queue.tape  search.tape
screenshots/tapes-gif/: demo.tape
scripts/: export_screenshots.py
src/ytmusic_tui/: __init__.py  actions.py  api.py  app.py  app.tcss  auth.py  config.py  formatting.py  keys.py  layout.py  mpris.py  navigation.py  player.py  queue.py
src/ytmusic_tui/views/: album.py  artist.py  base.py  filter_bar.py  guards.py  history.py  home.py  library.py  lyrics.py  player.py  playlist.py  popup.py  queue.py  search.py  widgets.py
tests/: helpers.py  test_api.py  test_app.py  test_auth.py  test_config.py  test_filter_bar.py  test_lyrics.py  test_mpris.py  test_navigation.py  test_player.py  test_playlist_ops.py  test_popup.py  test_queue.py  test_search_filter.py  test_sprint4.py  test_sprint5.py  test_sprint7.py  test_views.py
tests/fixtures/: playlist_with_tracks.json
ytmusic-api/: Cargo.toml  README.md
ytmusic-api/src/: auth.rs  classify.rs  client.rs  lib.rs  models.rs  nav.rs  parse.rs
ytmusic-api/src/endpoints/: album.rs  history.rs  home.rs  library.rs  mod.rs  mutations.rs  playlist.rs  radio.rs  search.rs  stage1.rs  tests.rs
ytmusic-api/tests/: integration.rs  parse_tests.rs
ytmusic-api/tests/fixtures_innertube/: album.json  album_expected.json  artist.json  artist_expected.json  history.json  home.json  library_albums.json  liked_songs.json  lyrics_browse.json  lyrics_watch.json  playlist.json  playlist_expected.json  search_default_expected.json  search_songs_expected.json  watch_radio.json
ytmusic-api/tests/fixtures_shared/: home_sections.json  library_album_item.json  library_albums.json  library_artist_item.json  library_artists.json  library_playlists.json  liked_songs.json  playlist_item.json  playlist_track.json  search_results_mixed.json  search_song.json
ytmusic-tui/: Cargo.toml
ytmusic-tui/src/: auth_cli.rs  clipboard.rs  config.rs  demo.rs  keymap.rs  lib.rs  main.rs  player.rs  queue.rs
ytmusic-tui/src/app/: mod.rs
ytmusic-tui/src/mpris/: mod.rs  player_impl.rs  trackid.rs
ytmusic-tui/src/views/: album.rs  filter_bar.rs  library.rs  mod.rs  player_bar.rs  playlist.rs  popup.rs  queue_view.rs  search.rs  toast.rs
