[project]
name = "ytmusic-tui"
version = "0.1.0"
description = "A TUI music player for YouTube Music, inspired by spotify_player"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "WakaTaira" }]
keywords = ["youtube-music", "tui", "terminal", "music-player"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Players",
]
dependencies = [
    "ytmusicapi>=1.12.0",
    "textual>=0.80.0",
    "python-mpv>=1.0.7",
    "yt-dlp>=2024.0.0",
    "tomli>=2.0.0;python_version<'3.11'",
    # MPRIS2 support. Pinned to 5.x because mpris.py vendors a fixed copy
    # of the 5.x _MessageWriter.write_callback (EAGAIN tolerance).
    "dbus-fast>=5.0,<6;sys_platform=='linux'",
]

[project.scripts]
ytmusic-tui = "ytmusic_tui.app:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6.0",
    "mypy>=1.11",
]

[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 99

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific rules
]

[tool.ruff.lint.per-file-ignores]
# D-Bus interfaces declare their wire signatures ("s", "b", "a{sv}", ...)
# as return annotations; pyflakes sees them as undefined forward references.
"src/ytmusic_tui/mpris.py" = ["F821", "F722"]

[tool.ruff.lint.isort]
known-first-party = ["ytmusic_tui"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that require a valid OAuth token and network access",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
# D-Bus interfaces declare wire signatures ("s", "b", "a{sv}", ...) as
# return annotations; they are a runtime DSL, not Python types.
module = "ytmusic_tui.mpris"
disable_error_code = ["name-defined", "valid-type"]
