[package]
name = "ytmusic-tui"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "YouTube Music TUI client (Rust port)"

[[bin]]
name = "ytmusic-tui"
path = "src/main.rs"

[lib]
name = "ytmusic_tui"
path = "src/lib.rs"

[dependencies]
# Domain models (Track, AlbumInfo, etc.) and parse helpers live in the api crate.
# This makes the dependency flow app → api instead of api → app.
ytmusic-api = { path = "../ytmusic-api" }

rand = "0.9"

# TOML parsing for config.toml and keymap.toml.  `features = ["parse"]` is the
# default; no extra features needed — we only deserialize, never serialize.
toml = { version = "0.8", default-features = false, features = ["parse"] }

# Typed deserialization via #[derive(Deserialize)].  The "derive" feature is the
# only thing we need; serde_json comes in via ytmusic-api so we reuse that dep
# transitively, but we declare serde directly so the feature is stable.
serde = { version = "1", features = ["derive"] }

# libmpv binding for the audio player (M2). 6.0.0 builds against system
# libmpv >= 2.x and exposes the end-file reason as a discriminable value,
# which is the non-negotiable selection criterion (see spikes/mpv_spike).
# `default-features = false` drops the `render` (OpenGL) feature: the player
# needs only audio playback + the event loop.
libmpv2 = { version = "6.0.0", default-features = false }

# Direct dependency on the -sys crate (pinned to the version libmpv2 6.0.0
# uses) for the safe `mpv_error_str(code) -> &'static str` helper that turns a
# raw mpv error int into a human-readable string. libmpv2 re-exports only types
# from -sys, not this function, so a direct dep is required.
libmpv2-sys = "4.0.1"

# Typed error definitions for the player module.
thiserror = "2"

[dev-dependencies]
# Temporary directory support for config-loading tests.
tempfile = "3"
