# MPRIS crate-selection spike for ytmusic-tui Rust port (milestone M6).
#
# IMPORTANT: the empty `[workspace]` table below makes this a standalone
# workspace root so the crate NEVER joins the parent `rust/` workspace
# (which sets `exclude = ["spikes"]`, but we belt-and-suspenders it here).
[workspace]

[package]
name = "mpris_spike"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
# Server-side MPRIS implementation built on zbus. 0.10.0 depends on zbus 5.14+
# (resolves to 5.16.x here). The `tokio` feature switches zbus's reactor onto
# the tokio runtime so MPRIS can share the same runtime as the future player.
mpris-server = { version = "0.10", features = ["tokio"] }

# We pull zbus directly only to reach low-level APIs in the spike
# (MessageStream / monitor_activity for the connection-death scenario).
# Must match the version mpris-server resolves, and enable the tokio reactor.
zbus = { version = "5.16", default-features = false, features = ["tokio"] }

tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "signal"] }
futures-util = "0.3"
