# Standalone crate-selection spike for the Rust port's M2 (audio playback).
#
# The empty `[workspace]` table below makes this project its OWN workspace
# root, so it never gets absorbed into the parent `rust/` workspace
# regardless of whether that workspace's `exclude = ["spikes"]` is present.
[workspace]

[package]
name = "mpv_spike"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
# Maintained fork of libmpv-rs. 6.0.0 (2026-05-12) builds against system
# libmpv >= 2.x and exposes the end-file reason as a discriminable enum,
# which is the non-negotiable selection criterion for this spike.
#
# `default-features = false` drops the `render` feature: we only need audio
# playback + the event loop, not the OpenGL/render API.
libmpv2 = { version = "6.0.0", default-features = false }

# libmpv2 surfaces an end-file ERROR as `Error::Raw(code)` where `code` is the
# raw mpv error int. To turn that into a human-readable string (as the Python
# version did via mpv's error table), we depend on the -sys crate directly for
# its safe `mpv_error_str(code) -> &'static str` helper. libmpv2 re-exports
# only types from -sys, not this function, so a direct dep is required.
# Pinned to the exact version libmpv2 6.0.0 itself uses so both bind to one
# libmpv2-sys instance.
libmpv2-sys = "4.0.1"
